[gray]July 16th, 2023

[white]Hi everybody! The [yellow]v0.3 release [white]is out with the 2nd sector finally here! It might be a little unbalanced.

The next update (v0.4) is planned to be content focused, with a lot of new content and very needed balancing (it's time to give your suggestion on our [blue]Discord[white]!).


[gray]June 17th, 2023

[white]Holà! The [yellow]first sector [white]was [green]updated[white]! The objectives are all back.

If you have any issue or feedback come on our [blue]Discord [white]or create an issue on GitHub! Adiós!


[gray]June 13th, 2023

[white]Hey everyone, big news for the mod! We now are a [red]Java [white]mod! You can update it by redownloading the mod via the mod browser, a release might come soon there's still some things left to finish.

Until then, cya!


[gray]April 22nd, 2023

[green]+ [white]New versioning number, simpler for everyone!
[yellow]* [white]Now only keeping the last 5 news messages, easier for client's bandwidth, and we don't need to keep living in the past ;P

If anyone wants to help out with translation, feel free to reach out of either Discord or GitHub!
We also need help from artists, if anyone's interested.


[gray]April 20th, 2023

[white] Hey, hey! Survival map should be [green]FIXED[white]!